level_omega/css/level.css
body  {
 font-size: 14px;
 padding:0px;
 margin:0px;
 background-color: #FFFCFA;
}

h1 {
 margin-top: 10px;
 margin-bottom: 14px;
}
#block-webform-client-block-8 h2 {
	display: none;
}

#breadcrumb {
	display: none;
}

#content .section {
  padding: 0;
}


#footer {
	font-size: 0.7em;
}

#footer-columns {
  /*border-top: 4px solid black;*/
}

  #footer-columns p {
    margin-top: 0;
    padding-top: 0.8em;
    line-height: 17px;
  }

#footer-wrapper {
  color: #000000;
}

  #footer-wrapper a:hover,
  #footer-wrapper a {
    color: #449bc9;
    text-decoration: none;
  }


  #footer-wrapper .block {
    margin: 0;
    padding: 0;
  }


#main_wrapper, #right_sidebar, #main_content_container {
	background-color: #f2f2f2;
	color: #898481;
	}
	
#main_wrapper .views-row, #right_sidebar .block {
	border-bottom: 1px solid #999390;
	border-top: 1px solid #fffcfa;
	} 

#main_wrapper .views-row {
  padding-top: 10px;
  padding-bottom: 10px;	
	}

#right_sidebar .block-apachesolr_passthru h2 {
	line-height: 2em;
	color: #5b5754;
	}

#right_sidebar .block-apachesolr_passthru ul {
	margin: 0px;
	margin-bottom: 10px;
	padding: 0px;
	}

#right_sidebar .block-apachesolr_passthru ul li {
    display: block;
    font-size: 0.9em;
    line-height: 1.4em;
    list-style: none inside none;
    margin: 0.8em 0;
	}	
	
/* First and last exceptions */
	#main_wrapper .views-row-first, #right_sidebar div:first-child {
	border-top: none;
	}
	
	#main_wrapper .views-row-last, #right_sidebar div:last-child {
  border-bottom: none;
  }
  
  

#top_bar {
	background-color: #FFFFFF;
	border-bottom: 1px solid #999390;
	padding-top: 10px;
	padding-bottom: 10px;
	
	}
/* exceptions to the header border */
div#header_container h2 { border: none; }

#name-and-slogan {
  margin-left: 0;
  margin-bottom: 24px;
  padding-top: 0;
}

#node-6 p {
  font-size: 2em;
}

h2#site-name {
	text-align: right;
	}

h2#site-name:before {
	content: "_";
	}

#site-name a {
  color: #000000;
  font-size: 2.1em;
  font-weight: bold;
  text-decoration: none;
  letter-spacing: -0.06em;
  line-height: 1em;
}

#site-slogan {
  display: none;
  font-style: normal;
}

#edit-submitted-email-address {
	width: 460px;
}

#webform-component-email-address {
	float: left;
	padding-right: 20px;
	margin-top: -10px;
}

a, ul.pager a {
  color: #21A0E1;
  text-decoration: none;
}

body.page-node-6 h1.title {
  display: none;
}


 

h2  {
   font-size: 1em;
  margin: 0px;
}

body.section-search div#main-wrapper h2 {
	display: none; }

body,
#site-slogan,
#site-name,
.ui-widget,
.comment-form label,
h1, h2, h3, h4, h5 {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.meta {
	display: none;
}

.views-field-company-name a {
 color: black;
 text-decoration: underline;
}

.views-field-company-name a:hover {
 color: #449BC9;
 text-decoration: none;
}

 form#views-exposed-form-Solr-page-1 input#edit-submit-Solr {
display: none;
}

#node-page-2 p {
    font-size: 2em;
}

.block-user label, .block-user input {
 text-align: left;
 width: 100%;
 padding: 0px;
}

.item-list  ul.pager li {
	margin-left: 0.25em;
	margin-right: 0.25em;
	} 
	

  #main_content_container {
	border-top: 2px solid #999390;
	}
  
  div.block-search input#edit-search-block-form-1 {
 
  }

	div.block-search h2 {
	display: none;
	}
	
	div.block-search label, form.search-form label {
	display: none;
	}
	
	dl.search-results dd { margin-left: 0px; }
	
	.fw-label {display: block; float: left; width: 220px;}
        .section { padding-top: 20px; }	
	span.field-content { font-weight: bold; }
span.field-content { font-weight: normal; }
        .sic_code { font-size: 1.5em; font-weight: bold; }
        .sic_term, .fw-label { font-size: 0.9em; color:rgb(102,97,94); } 
.views-label-address-line-2,
.views-label-address-line-3,
.views-label-address-line-4, 
.views-label-postcode,
.views-label-sic-term-2,
.views-label-sic-term-3,
.views-label-sic-term-4 {
  visibility: hidden;
}

#system_messages {
	color: white;
	font-weight: bold;
	text-align: center;
	}
	
#system_messages div {
	margin_bottom: 1px;
	padding: 5px;
	}	

#system_messages div.status {
  background-color: rgb(89,195,38);
}

#system_messages div.error {
  background-color: rgb(247,47,32);
}

#system_messages div.warn {
  background-color: rgb(79,167,226);
}

h1.company_name {
	/* other statuse will affect the background color */
	color: #4fa7e2;
	font-size: 30px;
	padding: 10px;
	margin: 0px;
	font-weight: bold;
	}

.views-field {
  clear: both;
}

#edit-text {
	border: 1px solid #999390;
	width: 220px;
	height: 20px;
	}
	
/* Styles for the search results page */

#block-apachesolr_search-currentsearch h2 {
	display: none;
	}

#block-apachesolr_search-currentsearch .results_string {

	font-size: 1.6em;
	color: #999390;
  }
  
#block-apachesolr_search-currentsearch  .results_string em {
  font-size: 1em;
  font-style: normal;
	color: #000000;
	font-weight: bold;
	}
	
#block-apachesolr_search-currentsearch  .search_term {
  font-size: 1em;
  }
  
#block-apachesolr_search-currentsearch .results_filter {
	float: right;
	}
	
.company-search-title {
    font-size: 1.6em;
    line-height: 1.2em;
	}


.item-list ul.pager li {
	  margin: 0 2px;
	  padding: 0;	
	}
	
.company_address div {
	font-size: 0.9em;
	line-height: 1.5em;
	}

#main-content .views-row  {
	margin: 0px;
  padding-bottom: 0.8em;
  padding-top: 0.4em;

	}
/* Styling for the company details page */

/* for debug 
.company-details-view .views-field {
	border: 1px solid black;
	}*/
	
.company-details-view {
	 background-color: #FFFFFF;
}

.company-details-view .company-details-label {
	font-size: 0.9em;
	}	
	
.company-details-view .field-content {
	  color: #000000;
    font-size: 1.4em;
    font-weight: bold;
	}	

.company-details-view  .views-field {
	clear: none;
	float:left;
	margin: 5px;
	}

.company-details-view .company-address,
.company-details-view .company-age, 
.company-details-view .company-number {
    width: 220px;
   
	}

.company-details-view .company-sic-codes {
	  width: 440px;
	}
	
.company-details-view dt { font-size: 0.9em;
     float: left;
     margin-right: 10px;
    }
.company-details-view dd { font-size: 0.8em;
      color: #898481;
      }
      
.company-details-view dl {
  padding-top: 5px;
  padding-bottom: 5px;
 border-bottom:1px solid #999390;
 }
.company-details-view dl:last-child {
	border-bottom: none;
	} 
 
 /* styles for the footer */

#footer_main {
	color: #FFFFFF;
	background-color: #32302D;
  padding-top: 5px;
  padding-bottom: 5px;
  margin-top: 10px;
	}

#footer_main .block {
	float: left;
	width: 220px;
	margin-right: 10px;
	}
	
#footer_main h2 {
	font-weight: normal;
	line-height: 2em;
	font-size: 1em;
	border-bottom: 1px solid #FFFFFF;
	} 

#footer_main .content {
	margin-top: 5px;
	font-size: 0.8em;
	}

